# sensortux

./: Makefile  Makefile.am  Makefile.in  ProjectHome.md  compile.sh  compilenew.sh  config.status  configure  info.sh  installpackages.sh  readme.txt  readme.txt.bak
XML/: activity.xml  duck1.xml  duck2.xml  duck3.xml  fire1.xml  fire2.xml  fire3.xml  jump1.xml  jump2.xml  jump3.xml  left1.xml  left2.xml  left3.xml  right1.xml  right2.xml  right3.xml
autom4te.cache/: output.0  traces.0
data/: Makefile  Makefile.in
docu/: index.html
docu/html/: ClassificationTux_8h_source.html  Configuration_8h_source.html  DataStrings_8h_source.html  Defines_8h_source.html  FrameParser2_8h_source.html  GestureManagement_8h_source.html  Helper_8h_source.html  IntSource_8h_source.html  LearningAlgorithm_8h_source.html  Mutex_8h_source.html  NearestClusterCenter_8h_source.html  Repercussion_8h_source.html  RoggenBuffer_8h_source.html  RoggenDataExtension_8h_source.html  RoggenFeatureExtraction_8h_source.html  RoggenSensorFusion_8h_source.html  RoggenSensor_8h_source.html  Thread_8h_source.html  TuxControlSingleton_8h_source.html  TuxControl_8h_source.html  XmlFileHandling_8h_source.html  annotated.html  classClassificationTux-members.html  classClassificationTux.html  classConfiguration-members.html  classConfiguration.html  classDataStrings-members.html  classDataStrings.html  classDefines.html  classFrameParser2-members.html  classFrameParser2.html  classGestureManagement-members.html  classGestureManagement.html  classHelper-members.html  classHelper.html  classIntSource-members.html  classIntSource.html  classLearningAlgorithm-members.html  classLearningAlgorithm.html  classMutex-members.html  (+99 more)
docu/html/search/: all_63.html  all_64.html  all_65.html  all_66.html  all_67.html  all_68.html  all_69.html  all_6c.html  all_6d.html  all_6e.html  all_6f.html  all_72.html  all_73.html  all_74.html  all_75.html  all_76.html  all_77.html  classes_63.html  classes_64.html  classes_65.html  classes_66.html  classes_67.html  classes_69.html  classes_6c.html  classes_6e.html  classes_72.html  classes_73.html  classes_74.html  classes_78.html  functions_61.html  functions_62.html  functions_63.html  functions_64.html  functions_65.html  functions_66.html  functions_67.html  functions_68.html  functions_69.html  functions_6b.html  functions_6c.html  (+8 more)
docu/latex/: annotated.tex  classClassificationTux.eps  classClassificationTux.tex  classConfiguration.aux  classConfiguration.eps  classConfiguration.tex  classDataStrings.aux  classDataStrings.tex  classDefines.aux  classDefines.tex  classFrameParser2.aux  classFrameParser2.tex  classGestureManagement.aux  classGestureManagement.tex  classHelper.aux  classHelper.tex  classIntSource.aux  classIntSource.eps  classIntSource.tex  classLearningAlgorithm.aux  classLearningAlgorithm.eps  classLearningAlgorithm.tex  classMutex.aux  classMutex.eps  classMutex.tex  classNearestClusterCenter.aux  classNearestClusterCenter.eps  classNearestClusterCenter.tex  classRepercussion.aux  classRepercussion.eps  classRepercussion.tex  classRoggenBuffer.aux  classRoggenBuffer.tex  classRoggenDataExtension.aux  classRoggenDataExtension.eps  classRoggenDataExtension.tex  classRoggenFeatureExtraction.aux  classRoggenFeatureExtraction.tex  classRoggenSensor.aux  classRoggenSensor.eps  (+53 more)
src/: ClassificationTux.cpp  ClassificationTux.h  Configuration.cpp  Configuration.h  ConfigureClassification.cpp  DataStrings.cpp  DataStrings.h  Defines.cpp  Defines.h  FrameParser2.cpp  FrameParser2.h  GestureManagement.cpp  GestureManagement.h  Helper-Templates.cpp2  Helper.cpp  Helper.h  IntSource.cpp  IntSource.h  LearningAlgorithm.cpp  LearningAlgorithm.h  Makefile  Makefile.am  Makefile.in  Mutex.cpp  Mutex.h  NearestClusterCenter.cpp  NearestClusterCenter.h  PrintRawSensors.cpp  RecordGestures.cpp  Repercussion.cpp  Repercussion.h  RoggenBuffer.cpp  RoggenBuffer.h  RoggenDataExtension.cpp  RoggenDataExtension.h  RoggenFeatureExtraction.cpp  RoggenFeatureExtraction.h  RoggenSensor.cpp  RoggenSensor.h  RoggenSensorFusion.cpp  (+29 more)
src/.deps/: ClassificationTux.Po  Configuration.Po  ConfigureClassification.Po  DataStrings.Po  Defines.Po  FrameParser2.Po  GestureManagement.Po  Helper.Po  IntSource.Po  LearningAlgorithm.Po  Mutex.Po  NearestClusterCenter.Po  PrintRawSensors.Po  Record.Po  RecordGestures.Po  Repercussion.Po  RoggenBuffer.Po  RoggenDataExtension.Po  RoggenFeatureExtraction.Po  RoggenSensor.Po  RoggenSensorFusion.Po  Test.Po  TestClassification.Po  Thread.Po  TuxControl.Po  TuxControlSingleton.Po  XmlFileHandling.Po  badguy.Po  bitmask.Po  button.Po  cmdline.Po  collision.Po  configfile.Po  gameloop.Po  gameobjs.Po  globals.Po  high_scores.Po  intro.Po  level.Po  leveleditor.Po  (+29 more)
tinyxml/: xmltest
