bin_PROGRAMS = supertux testclassification recordgestures printrawsensors configureclassification

supertux_SOURCES = \
badguy.cpp \
badguy.h \
bitmask.cpp \
bitmask.h \
button.cpp \
button.h \
collision.cpp \
collision.h \
configfile.cpp \
configfile.h \
intro.cpp \
intro.h \
defines.h \
gameloop.cpp \
gameloop.h \
globals.cpp \
globals.h \
high_scores.cpp \
high_scores.h \
level.cpp \
level.h \
leveleditor.cpp \
leveleditor.h \
lispreader.cpp \
lispreader.h \
menu.cpp \
menu.h \
particlesystem.cpp \
particlesystem.h \
physic.cpp \
physic.h \
player.cpp \
player.h \
scene.cpp \
scene.h \
screen.cpp \
screen.h \
setup.cpp \
setup.h \
sound.cpp \
sound.h \
special.cpp \
special.h \
text.cpp \
text.h \
texture.cpp \
texture.h \
timer.cpp \
timer.h \
title.cpp \
title.h \
type.cpp \
type.h \
world.cpp \
world.h \
worldmap.cpp \
worldmap.h \
tile.h \
tile.cpp \
mousecursor.cpp \
mousecursor.h \
resources.h \
resources.cpp \
gameobjs.h \
gameobjs.cpp \
sprite.h \
sprite.cpp \
sprite_manager.cpp \
sprite_manager.h \
music_manager.cpp \
music_manager.h \
musicref.cpp \
musicref.h \
Defines.h \
Defines.cpp \
Helper.h \
Helper.cpp \
Helper-Templates.cpp2 \
IntSource.h \
IntSource.cpp \
RoggenSensor.h \
RoggenSensor.cpp \
RoggenSensorFusion.h \
RoggenSensorFusion.cpp \
RoggenDataExtension.h \
RoggenDataExtension.cpp \
RoggenBuffer.h \
RoggenBuffer.cpp \
LearningAlgorithm.h \
LearningAlgorithm.cpp \
NearestClusterCenter.h \
NearestClusterCenter.cpp \
RoggenFeatureExtraction.h \
RoggenFeatureExtraction.cpp \
XmlFileHandling.h \
XmlFileHandling.cpp \
Configuration.h \
Configuration.cpp \
FrameParser2.h \
FrameParser2.cpp \
DataStrings.h \
DataStrings.cpp \
tinyxml.h \
tinyxml.cpp \
tinystr.h \
tinystr.cpp \
tinyxmlerror.cpp \
tinyxmlparser.cpp \
cmdline.h \
cmdline.cpp \
GestureManagement.h \
GestureManagement.cpp \
Mutex.h \
Mutex.cpp \
Thread.h \
Thread.cpp \
TuxControl.h \
TuxControl.cpp \
ClassificationTux.h \
ClassificationTux.cpp \
TuxControlSingleton.h \
TuxControlSingleton.cpp \
Repercussion.h \
Repercussion.cpp \
supertux.cpp 

testclassification_SOURCES = \
Defines.h \
Defines.cpp \
Helper.h \
Helper.cpp \
Helper-Templates.cpp2 \
IntSource.h \
IntSource.cpp \
RoggenSensor.h \
RoggenSensor.cpp \
RoggenSensorFusion.h \
RoggenSensorFusion.cpp \
RoggenDataExtension.h \
RoggenDataExtension.cpp \
RoggenBuffer.h \
RoggenBuffer.cpp \
LearningAlgorithm.h \
LearningAlgorithm.cpp \
NearestClusterCenter.h \
NearestClusterCenter.cpp \
RoggenFeatureExtraction.h \
RoggenFeatureExtraction.cpp \
XmlFileHandling.h \
XmlFileHandling.cpp \
Configuration.h \
Configuration.cpp \
FrameParser2.h \
FrameParser2.cpp \
DataStrings.h \
DataStrings.cpp \
tinyxml.h \
tinyxml.cpp \
tinystr.h \
tinystr.cpp \
tinyxmlerror.cpp \
tinyxmlparser.cpp \
cmdline.h \
cmdline.cpp \
GestureManagement.h \
GestureManagement.cpp \
Mutex.h \
Mutex.cpp \
Thread.h \
Thread.cpp \
TuxControl.h \
TuxControl.cpp \
ClassificationTux.h \
ClassificationTux.cpp \
TuxControlSingleton.h \
TuxControlSingleton.cpp \
Repercussion.h \
Repercussion.cpp \
TestClassification.cpp

recordgestures_SOURCES = \
Defines.h \
Defines.cpp \
Helper.h \
Helper.cpp \
Helper-Templates.cpp2 \
Mutex.h \
Mutex.cpp \
Thread.h \
Thread.cpp \
IntSource.h \
IntSource.cpp \
RoggenSensor.h \
RoggenSensor.cpp \
RoggenSensorFusion.h \
RoggenSensorFusion.cpp \
RoggenDataExtension.h \
RoggenDataExtension.cpp \
RoggenBuffer.h \
RoggenBuffer.cpp \
LearningAlgorithm.h \
LearningAlgorithm.cpp \
NearestClusterCenter.h \
NearestClusterCenter.cpp \
RoggenFeatureExtraction.h \
RoggenFeatureExtraction.cpp \
XmlFileHandling.h \
XmlFileHandling.cpp \
Configuration.h \
Configuration.cpp \
FrameParser2.h \
FrameParser2.cpp \
DataStrings.h \
DataStrings.cpp \
tinyxml.h \
tinyxml.cpp \
tinystr.h \
tinystr.cpp \
tinyxmlerror.cpp \
tinyxmlparser.cpp \
cmdline.h \
cmdline.cpp \
GestureManagement.h \
GestureManagement.cpp \
Repercussion.h \
Repercussion.cpp \
RecordGestures.cpp

printrawsensors_SOURCES = \
Defines.h \
Defines.cpp \
Helper.h \
Helper.cpp \
Helper-Templates.cpp2 \
Mutex.h \
Mutex.cpp \
IntSource.h \
IntSource.cpp \
RoggenSensor.h \
RoggenSensor.cpp \
RoggenSensorFusion.h \
RoggenSensorFusion.cpp \
RoggenDataExtension.h \
RoggenDataExtension.cpp \
XmlFileHandling.h \
XmlFileHandling.cpp \
Configuration.h \
Configuration.cpp \
FrameParser2.h \
FrameParser2.cpp \
DataStrings.h \
DataStrings.cpp \
tinyxml.h \
tinyxml.cpp \
tinystr.h \
tinystr.cpp \
tinyxmlerror.cpp \
tinyxmlparser.cpp \
cmdline.h \
cmdline.cpp \
PrintRawSensors.cpp

configureclassification_SOURCES = \
Defines.h \
Defines.cpp \
Helper.h \
Helper.cpp \
Helper-Templates.cpp2 \
XmlFileHandling.h \
XmlFileHandling.cpp \
Configuration.h \
Configuration.cpp \
tinyxml.h \
tinyxml.cpp \
tinystr.h \
tinystr.cpp \
tinyxmlerror.cpp \
tinyxmlparser.cpp \
Mutex.h \
Mutex.cpp \
Thread.h \
Thread.cpp \
ConfigureClassification.cpp

# EOF #
